compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__echo_followed_by_panic.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn main() {\n  echo panic\n}\n"
---
----- SOURCE CODE

pub fn main() {
  echo panic
}


----- WARNING
warning: Unreachable code
  ┌─ /src/warning/wrn.gleam:3:3
  │
3 │   echo panic
  │   ^^^^^^^^^^

This `echo` won't print anything because the expression it should be
printing always panics.
