compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__javascript_unsafe_int_binary.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn go() {\n  [\n    0b11111111111111111111111111111111111111111111111111110,\n    0b11111111111111111111111111111111111111111111111111111,\n    0b100000000000000000000000000000000000000000000000000000,\n  ]\n}\n"
---
----- SOURCE CODE

pub fn go() {
  [
    0b11111111111111111111111111111111111111111111111111110,
    0b11111111111111111111111111111111111111111111111111111,
    0b100000000000000000000000000000000000000000000000000000,
  ]
}


----- WARNING
warning: Int is outside JavaScript's safe integer range
  ┌─ /src/warning/wrn.gleam:6:5
  │
6 │     0b100000000000000000000000000000000000000000000000000000,
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This is not a safe integer value on JavaScript

This integer value is too large to be represented accurately by
JavaScript's number type. To avoid this warning integer values must be in
the range -(2^53 - 1) - (2^53 - 1).

See JavaScript's Number.MAX_SAFE_INTEGER and Number.MIN_SAFE_INTEGER
properties for more information.
